# RTG

./: .gitignore  README.md  train_rtg.sh
CenterPoint/: .gitignore
CenterPoint/configs/rtg/: rtg_centerpoint_voxelnet.py
CenterPoint/det3d/: builder.py
CenterPoint/det3d/datasets/: __init__.py  builder.py
CenterPoint/det3d/models/: builder.py
CenterPoint/tools/: train_rtg.py
config/: calib_from_bag.yaml  calib_synthetic.yaml  geometry.yaml  rtg_all_sensors.rviz  system.yaml  warning.yaml
doc/: Phase2_数据分析报告.md  几何空间与传感器FOV参考手册.md  大车防撞项目知识文档.md  开发计划.md  总体技术方案.md  接口协议.md  数据方案.md  标定需求.md  标注规范.md  测试验收方案.md  配置说明.md  项目参数基线.md  项目完整报告.md
nodes/: __init__.py  rtg_bev_node.py
postprocessing/: __init__.py  config_loader.py  constants.py  ego_motion.py  footprint_filter.py  tracker.py  warning_engine.py
rtg_bev_msgs/: CMakeLists.txt  __init__.py  package.xml
rtg_bev_msgs/msg/: Detection.msg  DetectionArray.msg  EgoMotionState.msg  Track.msg  TrackArray.msg  Warning.msg  WarningArray.msg  WarningZone.msg
rtg_bev_msgs/srv/: SetWarningParam.srv
tests/: test_rtg_pipeline_chain.py
tools/: _analyze_new_bag.py  _animate_fov.py  _check_lidar_frames.py  _draw_fov_aligned.py  _draw_fov_topdown.py  _draw_tracking.py  _extract_new_bag.py  _start_rviz.sh  _test_ego_motion.py  _tf_republisher.py  draw_simulated_bev_scene.py  eval_rtg.py  play_bag_rviz.sh  rtg_eval.py
tools/data_converter/: __init__.py  _extract_bag.py  calib_validator.py  gen_synthetic_infos.py  generate_rtg_infos.py  image_yellow_lines_to_bev.py  project_3d_to_2d.py  rosbag_extract.py
(+9 files in other folders)
