<?xml version="1.0"?>
<package format="2">
  <name>rtg_bev_msgs</name>
  <version>0.1.0</version>
  <description>RTG BEV anti-collision system custom ROS1 messages</description>

  <maintainer email="rtg-team@example.com">RTG BEV Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
